--- a/html/pieces.html
+++ b/html/pieces.html
@@ -46,84 +46,73 @@
       <div id='wrapper'>
         <div id='main'>
           <h1>Game Pieces</h1>
-          <div class='cont_left'>
-            <div class='img_cont'>
-              <div id='img1'>
-                <img src='../images/token_barrow.png'>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, magni iusto omnis expedita reprehenderit excepturi unde qui aut voluptas quas! Impedit, dolore iste molestias maiores cumque quia modi quae laborum!
-                </p>
-              </div>
-            </div>
-            <div class='img_cont'>
-              <div id='img2'>
-                <img src='../images/token_boot.png'>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, deleniti labore maiores repudiandae corrupti. Omnis, incidunt, quia, enim sunt praesentium laboriosam labore commodi nemo possimus maxime aspernatur necessitatibus unde vero.
-                </p>
-              </div>
+          <div class='outside_image'>
+            <div class='inside_image'>
+              <h2>Wheelbarrow</h2>
+              <img src='../images/token_barrow.png'>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, magni iusto omnis expedita reprehenderit excepturi unde qui aut voluptas quas! Impedit, dolore iste molestias maiores cumque quia modi quae laborum!
+              </p>
             </div>
           </div>
-          <div class='cont_right'>
-            <div class='img_cont'>
-              <div id='img3'>
-                <img src='../images/token_car.png'>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, deleniti labore maiores repudiandae corrupti. Omnis, incidunt, quia, enim sunt praesentium laboriosam labore commodi nemo possimus maxime aspernatur necessitatibus unde vero.
-                </p>
-              </div>
-            </div>
-            <div id='cowboy'>
-              <div class='img_cont'>
-                <div id='img4'>
-                  <img src='../images/token_cowboy.png'>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, deleniti labore maiores repudiandae corrupti. Omnis, incidunt, quia, enim sunt praesentium laboriosam labore commodi nemo possimus maxime aspernatur necessitatibus unde vero.
-                  </p>
-                </div>
-              </div>
+          <div class='outside_image'>
+            <div class='inside_image'>
+              <h2>Boot</h2>
+              <img src='../images/token_boot.png'>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, deleniti labore maiores repudiandae corrupti. Omnis, incidunt, quia, enim sunt praesentium laboriosam labore commodi nemo possimus maxime aspernatur necessitatibus unde vero.
+              </p>
             </div>
           </div>
-          <div class='clear'></div>
-          <div class='cont_horizontal'>
-            <div class='img_horizontal'>
+          <div class='outside_image'>
+            <div class='inside_image'>
+              <h2>Car</h2>
+              <img src='../images/token_car.png'>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, deleniti labore maiores repudiandae corrupti. Omnis, incidunt, quia, enim sunt praesentium laboriosam labore commodi nemo possimus maxime aspernatur necessitatibus unde vero.
+              </p>
+            </div>
+          </div>
+          <div class='outside_image'>
+            <div class='inside_image'>
+              <h2>Dog</h2>
               <img src='../images/token_dog.png'>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, deleniti labore maiores repudiandae corrupti. Omnis, incidunt, quia, enim sunt praesentium laboriosam labore commodi nemo possimus maxime aspernatur necessitatibus unde vero.
               </p>
             </div>
-            <div class='img_horizontal'>
+          </div>
+          <div class='outside_image'>
+            <div class='inside_image'>
+              <h2>Top Hat</h2>
               <img src='../images/token_hat.png'>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, deleniti labore maiores repudiandae corrupti. Omnis, incidunt, quia, enim sunt praesentium laboriosam labore commodi nemo possimus maxime aspernatur necessitatibus unde vero.
               </p>
             </div>
-            <div class='img_horizontal'>
+          </div>
+          <div class='outside_image'>
+            <div class='inside_image'>
+              <h2>Iron</h2>
               <img src='../images/token_iron.png'>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos, deleniti labore maiores repudiandae corrupti. Omnis, incidunt, quia, enim sunt praesentium laboriosam labore commodi nemo possimus maxime aspernatur necessitatibus unde vero.
               </p>
             </div>
           </div>
-          <div class='clear'></div>
-          <div class='cont_left'>
-            <div class='img_cont'>
-              <img src='../images/token_thimble.png'>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              </p>
+          <div id='ship'>
+            <div class='outside_image'>
+              <div class='inside_image'>
+                <h2>Battleship</h2>
+                <img src='../images/token_ship.png'>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, praesentium, sunt, provident in minus laborum quibusdam natus nihil consectetur eaque assumenda nesciunt fuga illo voluptatem neque beatae aut facere architecto!
+                </p>
+              </div>
             </div>
           </div>
-          <div class='cont_right'>
-            <div class='img_cont'>
-              <img src='../images/token_ship.png'>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, praesentium, sunt, provident in minus laborum quibusdam natus nihil consectetur eaque assumenda nesciunt fuga illo voluptatem neque beatae aut facere architecto!
-              </p>
-            </div>
-          </div>
-          <div class='clear'></div>
         </div>
+        <div class='clear'></div>
       </div>
     </div>
     <footer>
